src/snapshots/rv__add__tests__add_git_comprehensive.snap
---
source: src/add.rs
expression: doc.to_string()
---
[project]
name = "test-project"
r_version = "4.4"

repositories = [
    { alias = "cran", url = "https://cran.r-project.org"},
    { alias = "ppm", url = "https://packagemanager.posit.co/cran/latest"},
]

dependencies = [
    { name = "mypkg", git = "https://github.com/user/repo", tag = "v1.0.0", directory = "subdir", install_suggestions = true, dependencies_only = true },
]
